ng-template, ngIf ngIfThen ngIfElse TemplateRef, ViewContainerRef

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,9 @@
 <body>
   <app-root>Please wait loading...</app-root>
 
+  <!-- <template id="tpl">
+    <p> Alice and a <b>Cat</b> </p>
+  </template> -->
+
 </body>
 </html>
